[package]
name = "reassembly_blocks_file_formatter"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
